LendingTree Lead Onboarding Automation/main/default/objects/Email__c/fields/From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Email_Address__c</fullName>
    <label>From Email Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>