LendingTree Lead Onboarding Automation/main/default/objects/Email__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Emails</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <type>Lookup</type>
</CustomField>