LendingTree Lead Onboarding Automation/main/default/objects/Email__c/fields/To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>To_Email_Address__c</fullName>
    <label>To Email Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>